# veil-API

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_phase4.py  0005_google_oauth.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  limiter.py  security.py  sigils.py
backend/app/models/: __init__.py  message.py  operator.py  presence.py  room.py  room_member.py  seance.py  seeker.py  user.py  whisper.py
backend/app/realtime/: hub.py
backend/app/routers/: auth.py  debug.py  rooms.py  seances.py
backend/app/schemas/: __init__.py  auth.py  presence.py  seance.py  seeker.py  whisper.py
backend/app/services/: auth_service.py  google_service.py  presence_service.py  seance_service.py
backend/tests/: conftest.py  test_auth.py  test_seances.py  test_whispers.py  test_ws.py
frontend/: CLAUDE.md  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  seances.ts  types.ts
frontend/src/lib/: useSeanceSocket.ts
frontend/src/pages/: GitHubCallbackPage.tsx  GoogleCallbackPage.tsx  InvitePage.tsx  LobbyPage.tsx  LoginPage.tsx  RegisterPage.tsx  RoomPage.tsx
frontend/src/store/: auth.tsx
