[project]
name = "ouija-api"
version = "0.1.0"
description = "A real-time web chat service using FastAPI with WebSockets."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "redis>=7.4.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]
